# AKA

./: .gitignore  AKA-Sidecar-Stress-Test-Report.md  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  References.md  aka-product-page-content.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
.github/: RELEASE_NOTES_v1.0.3.md
.github/workflows/: release.yml
src/: AppShell.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/aka-runtime/: Cargo.toml  build.rs
src-tauri/aka-runtime/src/: hardware.rs  inference.rs  main.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: rename-runtime.ps1  rename-runtime.sh
src-tauri/src/: error.rs  hardware.rs  lib.rs  main.rs  path_env.rs  sandbox.rs  sidecar.rs
src-tauri/src/commands/: agent_runner.rs  checkpoints.rs  dev_server.rs  diff.rs  files.rs  llm.rs  mod.rs  models.rs  project_config.rs  shell.rs  shell_run.rs  tokens.rs  verify.rs
src/components/: AddPaneButton.tsx  AskUserSheet.tsx  BottomBar.tsx  ChatPane.tsx  Collapse.tsx  ConcurrencyRamWarningModal.tsx  CustomAgentModal.tsx  CustomAgentPanel.tsx  DeleteProjectModal.tsx  DevServerPromptModal.tsx  ErrorBanner.tsx  ErrorBoundary.tsx  FileFinder.tsx  FolderPermissionModal.tsx  ImageLightbox.tsx  Omnibox.tsx  Pane.tsx  PermissionRequestModal.tsx  Pill.tsx  Popover.tsx  ProjectPill.tsx  Resizer.tsx  SameModelAdviceModal.tsx  Tooltip.tsx  TopBar.tsx  Workspace.tsx
src/components/chat-history/: AgentActivityAccordion.tsx  ChatHistory.tsx  MessageItem.tsx  tool-summary.tsx
src/components/chatbox/: AgentPicker.tsx  AgentQuestionCard.tsx  AttachButton.tsx  AttachmentChips.tsx  ChatBoxFooter.tsx  CheckpointTimeline.tsx  DropOverlay.tsx  ModePicker.tsx  ModelPicker.tsx  PickerPill.tsx  SetupChecklist.tsx  UsageMeter.tsx  WelcomeHero.tsx
src/components/first-run/: AgentStep.tsx  FirstRunOverlay.tsx  ProjectStep.tsx  RuntimeStep.tsx  WelcomeStep.tsx
src/components/pane-content/: BrowserContent.tsx  ConsoleContent.tsx  DiffContent.tsx  FileContent.tsx  (+3 more)
src/lib/: agent-command.ts  agent-recipe.ts  agent-wrapper.ts  detect-dev-server.ts  error-fixes.ts  humanize-error.ts  mock-file-tree.ts  model-capabilities.ts  model-match.ts  project-tree.ts  run-auto-fix.ts  session-concurrency.ts  use-dismiss.ts  use-drop-attachments.ts  use-file-buffer.ts  use-session-messages-sync.ts  use-token-counter-sync.ts
src/stores/: use-agents-store.ts  use-ask-user-store.ts  use-attachments-store.ts  use-chat-store.ts  use-custom-agents-store.ts  use-dev-server-store.ts  use-drag-store.ts  use-finder-store.ts  use-first-run-store.ts  use-messages-store.ts  use-models-store.ts  use-prefs-store.ts  use-project-config-store.ts  use-projects-store.ts  use-session-store.ts  use-shell-runner-store.ts  use-token-counter-store.ts  use-workspace-store.ts
(+50 files in other folders)
