[package]
name = "aka"
version = "0.1.0"
description = "AKA — local-first agentic coder desktop app"
edition = "2021"

[lib]
name = "aka_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
base64 = "0.22"
which = "6"
sysinfo = "0.33"
num_cpus = "1"
libloading = "0.8"
tracing = "0.1"
fs2 = "0.4"
portable-pty = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
