# Standalone sidecar crate. Declared as its own workspace root (empty
# `[workspace]` table) so it is never pulled into the parent `aka` package's
# build — it is compiled separately and the named binary copied into
# `src-tauri/binaries/` via `scripts/rename-runtime.{sh,ps1}`.
[workspace]

[package]
name = "aka-runtime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aka-runtime"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
async-stream = "0.3"
futures = "0.3"
sysinfo = "0.33"
num_cpus = "1"
uuid = { version = "1", features = ["v4"] }

# Real llama.cpp inference. The crate publishes as `llama-cpp-2` (hyphens) and
# imports in code as `llama_cpp_2`. `default-features = false` drops the default
# `openmp` feature, which needs libomp and fails to build under Apple clang on
# macOS; llama.cpp falls back to its own pthread threading (`--threads` still
# honoured). The Metal backend is enabled per-platform via the target-specific
# dependency below — NOT via a build-script cfg, which cannot turn on a
# dependency's cargo feature.
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
llama-cpp-2 = { version = "0.1.146", default-features = false, features = ["metal"] }

# All other platforms: CPU-only for now. CUDA is a deliberate opt-in for a
# later step (add `features = ["cuda"]` then) — do not enable it here.
[target.'cfg(not(all(target_os = "macos", target_arch = "aarch64")))'.dependencies]
llama-cpp-2 = { version = "0.1.146", default-features = false }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "s"
strip = true
